# nba-elo

./: .env.example  .gitignore  NBARater.py  NBAScraper.py  PlayoffScraper.py  README.md  app.py  main.py  nba-rating.ipynb  pyproject.toml  script.py
.ipynb_checkpoints/: nba-rating-checkpoint.ipynb
assets/: dragdrop.js  style.css
backend/: NBARater.py  NBAScraper.py  migrate.py
backend/app/: database.py  main.py  models.py  schemas.py  team_meta.py
backend/app/routers/: elo.py  games.py  matchup.py  meta.py  refresh.py  standings.py  upcoming.py
data/: 2010-2024.csv  2012-2023.csv  2012-2024.csv  2013-2023.csv  2022-2024.csv  2024-2024.csv  nba_data.csv
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: EloStandings.tsx  History.tsx  Matchup.tsx  Upcoming.tsx
notebooks/: home-court-adv.ipynb  nba-rating.ipynb
