[project]
name = "nba-elo"
version = "0.2.0"
description = "NBA ELO Rating Dashboard — FastAPI + React"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "lxml",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "greenlet",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = []
